--- a/project.config.json
+++ b/project.config.json
@@ -6,16 +6,16 @@
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
-		"postcss": true,
-		"minified": true,
+		"postcss": false,
+		"minified": false,
 		"newFeature": true,
 		"autoAudits": false,
 		"coverView": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.9.3",
+	"libVersion": "1.9.94",
 	"appid": "touristappid",
-	"projectname": "beautiful_way_marriage",
+	"projectname": "jm_racing_car",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
@@ -43,7 +43,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
@@ -56,6 +56,7 @@
 					"id": -1,
 					"name": "预约",
 					"pathName": "pages/reservation/index",
+					"query": "",
 					"scene": null
 				}
 			]
