--- a/project.config.json
+++ b/project.config.json
@@ -79,6 +79,13 @@
 					"pathName": "pages/myself/driver_license/driver_license",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": 5,
+					"name": "pages/login/toloading/toloading",
+					"pathName": "pages/login/toloading/toloading",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
