--- a/app.json
+++ b/app.json
@@ -44,6 +44,11 @@
       }
     ]
   },
+  "networkTimeout": {
+    "request": 10000,
+    "downloadFile": 10000
+  },
+  "debug": true,
   "style": "v2",
   "sitemapLocation": "sitemap.json"
 }
